--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="#" type="image/x-icon">
-  <title>График полива</title>
-  <link rel="stylesheet" href="src/css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="#" type="image/x-icon">
+	<title>График полива</title>
+	<link rel="stylesheet" href="src/css/style.css">
 </head>
 <body class="page-body">
 
 <table class="table">
-  <caption>График полива цветов</caption>
+	<caption>График полива цветов</caption>
 
-  <tr class="table__row">
-    <th class="table__head">Имя</th>
-    <th class="table__head">Интервал</th>
-    <th class="table__head">Последний</th>
-    <th class="table__head">Следующий</th>
-  </tr>
-
+	<tbody class="table__tbody">
+		<tr class="table__row">
+			<th class="table__head">Имя</th>
+			<th class="table__head">Интервал</th>
+			<th class="table__head">Последний</th>
+			<th class="table__head">Следующий</th>
+		</tr>
+	</tbody>
 </table>
 
 <script type="module" src="src/js/app.js"></script>
