--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="page-body">
 
 <table class="table">
-	<caption>График полива цветов</caption>
+	<caption>График полива цветов <span class="table__current-day"></span></caption>
 
 	<tbody class="table__tbody">
 		<tr class="table__row">
