--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<tr class="table__row">
 			<th class="table__head">Имя</th>
 			<th class="table__head">Интервал</th>
+			<th class="table__head">День</th>
 			<th class="table__head">Последний</th>
 			<th class="table__head">Следующий</th>
 		</tr>
