--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<th class="table__head">День</th>
 			<th class="table__head">Последний</th>
 			<th class="table__head">Следующий</th>
+			<th class="table__head">День</th>
 		</tr>
 	</tbody>
 </table>
