added method days ago

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<th class="table__head">Имя</th>
 			<th class="table__head">Интервал</th>
 			<th class="table__head">День</th>
+			<th class="table__head">Дней назад</th>
 			<th class="table__head">Последний</th>
 			<th class="table__head">Следующий</th>
 			<th class="table__head">День</th>
