--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<tbody class="table__tbody">
 		<tr class="table__row">
 			<th class="table__head">Имя</th>
-			<th class="table__head">Интервал</th>
+			<th class="table__head">Интервал полива в неделю</th>
 			<th class="table__head">День</th>
 			<th class="table__head">Дней назад</th>
 			<th class="table__head">Последний</th>
